--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,8 +38,11 @@
             }
             .about-me{
               width:50%;  
-              margin:auto;          
+              margin:auto;  
+              line-height: 2;   
+     
             }
+            
             .skills{
                 width:10%;
                 margin: 20px auto 20px auto;
@@ -70,7 +73,11 @@
             .top-container{
             background-color:rgba(10, 168, 207, 0.297);
             padding-top:100px;
-            
+            /* background-image: url("../images/GalaxyButterflies.jpg"); */
+            background-size:1000px auto ;
+            background-repeat: no-repeat;
+            /* margin-left:178px; */
+
             }
             /* 1em=16x */
             h3{
