--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,158 +1,81 @@
 /* *{
     border:2px solid red;
 } */
-            body{
-                background-color: #fefefeef;
-                margin:0;
-                text-align:center;
-                font-family: "Ariel",Arial, Helvetica, sans-serif;
-            }
-            .top-cloud{
-                position:absolute;
-                margin-left: 400px;
-                margin-top:-53px;
+          
+                 /* Diagonal style */
+                     body{
+                     background-color:rgb(207, 207, 207);
+                     height: 100%;
+                     margin: 120px auto 120px auto;
+                    }
+                    .main-div{
+                     border-top: 3px solid #130547;
+                     border-left: 3px solid #130547;
+                     border-bottom: 3px solid #51a1fc;
+                     border-right: 3px solid #51a1fc;
+                     width:500px;
+                     height:476px;
+                     margin:0 auto ;
+                     top:50%;
+                     position:relative;
+                     overflow: hidden;
+                  }
+                    .art-side{
+                     height:101vh;
+                     background:#130547;
+                     clip-path:polygon(0 0%, 100% 0, 100% 66%, 0 66%);
+                     position:absolute;
+                     width:100%;
+                      }
+                    .code-side{
+                     height:101vh;
+                     background:#51a1fc;
+                     clip-path:polygon(0% 0%, 100% 0, 100% 0%, 0 66%);
+                     position:absolute;
+                     width:100%;
+                      }
+                      /* Hover section */
+                      .code-side:hover{
+                          background-color: #7195be
+                      }
+                      .art-side:hover{
+                          background-color:#2e274d;
+                      }
+
+                h1{
+                    margin:0;
+                }
+
+                p{
+                    font-size: 30px;
+                    position:absolute;
+                   top:315px;
+                   right:50px;
+                   width:200px;
+                   height:100px;
+                   color:white;
+                   font-size: 40px;
+                }
+                a{
+                    margin:0;
+                }
+                .art-heading{
+                   position:absolute;
+                   top:300px;
+                   right:-15px;
+                   width:200px;
+                   height:100px;
+                   color:white;
+                   font-size: 50px;
+                }
+                .software-heading{
+                   position:absolute;
+                   top:100px;
+                   right:260px;
+                   width:200px;
+                   height:100px;
+                   color:black;
+                   font-size: 40px;
+                }
                 
-            }
-            h1{
-                font-size:3rem;
-                margin-top:50px auto 0 auto;
-                color:#3e8f8f;
-            }
-            h2{
-                font-size:2rem;
-                color:#3e8f8f;
-                font-weight:normal;
-                margin: 0px auto 0px auto;
                 
-            }
-            .bottom-cloud{
-                position:absolute;
-                margin-left:-500px;
-            }
-            .profile-pic{
-                width:165px;
-                height:200px;
-                margin: 20px auto 20px auto;
-                border: 1px solid black; 
-
-            }
-            .about-me{
-              width:50%;  
-              margin:auto;  
-              line-height: 2;   
-     
-            }
-            
-            .skills{
-                width:10%;
-                margin: 20px auto 20px auto;
-            }
-                
-            
-            hr{
-                 border-style:none ;
-                 border-top-style:dotted;
-                 width: 3%;
-                 border-color:rgb(170, 170, 170);
-                 border-width: 5px;
-                 
-            }
-            
-            .contactMe{
-                /* background-color:rgb(54,18,70); */
-                /* color:white; */
-                margin:40px auto 40px auto;
-            }
-            .middle-container{
-               margin:30px 0;
-            }
-            .bottom-container{
-                background-color: #065255;
-                padding:50px 0 20px;
-            }
-            .top-container{
-            background-color:rgba(10, 168, 207, 0.297);
-            padding-top:100px;
-            /* background-image: url("../images/GalaxyButterflies.jpg"); */
-            background-size:1000px auto ;
-            background-repeat: no-repeat;
-            /* margin-left:178px; */
-
-            }
-            /* 1em=16x */
-            h3{
-                color:#11999e;
-                margin: 20px auto 20px auto;
-            }
-            a{
-                color:#11999e;
-            }
-            .skill-row{
-                width:50%;
-                margin:50px auto 50px auto;
-                text-align:left;
-                line-height: 2;
-            }
-            
-            .kanban_thumbnail, .GRMblr{
-                float:left;
-                margin-right:30px;
-                width:200px;
-                height:100px;
-            }
-            .bug-log{
-                float:right;
-                margin-left:30px;
-                width:200px;
-                height:100px;
-            }
-            
-            
-            .code-description{
-            margin: 0px auto 0px auto;
-             }
-
-             .btn {
-                background: #11CDD4;
-                background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-                background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-                background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-                background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-                background-image: linear-gradient(to bottom, #11CDD4, #11999E);
-                -webkit-border-radius: 8;
-                -moz-border-radius: 8;
-                border-radius: 8px;
-                font-family: Arial;
-                color: #ffffff;
-                font-size: 20px;
-                padding: 10px 20px 10px 20px;
-                border: solid #1F628D 2px;
-                text-decoration: none;
-              }
-              
-              .btn:hover {
-                background: #30E3CB;
-                background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
-                background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
-                background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
-                background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
-                background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
-                text-decoration: none;
-              }
-              .letsChat-description{
-                margin: 40px auto 40px auto;
-                 }
-                 a{
-                     color:#11999e;
-                     margin: 10px 20px;
-                     text-decoration:none;
-
-                 }
-                 a:hover{
-                    color: #eaf6f6;
-                 }
-                 .copyright{
-                     color:#eaf6f6;
-                     font-size:0.75rem;
-                     padding: 20px 0;
-                 }
