--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,11 +14,12 @@
                     }
                     
                     .code-side{
-                     background-image:url("../images/pankaj-patel-_SgRNwAVNKw-unsplash.jpg");
-                     background-size:480px, 480px;
+                     /* background-image:url("../images/pankaj-patel-_SgRNwAVNKw-unsplash.jpg"); */
+                     /* background-size:480px, 480px; */
+                     background-color: rgb(5, 5, 27);
                      width:300px;
                      height:300px;
-                     margin:0 auto 20px auto; 
+                     /* margin:10% auto 10% auto;     */
                      color: black;
                      border:3px solid #130547;
                      padding-left:0px;
@@ -29,28 +30,21 @@
                     }
                     
                     .art-side{
-                        background-image:url("../images/GalaxyButterflies.jpg");
+                        /* background-image:url("../images/GalaxyButterflies.jpg"); */
+                        background-color: rgb(5, 5, 27);
                         background-size:480px, 480px;
                         width:300px;
                         height:300px;
                         text-align:center;
-                        margin:0 auto 20px auto;    
+                        /* margin:10% auto 10% auto;     */
                         color: #fff;
                         border:3px solid #7195be;
                     }
                     
                     /* @media section */
                     
-                        @media (max-width: 800px){
-                        .code-side{
-                         margin: 5% 15% 5% 15%;
-                        }
-                    
-                        .art-side{
-                            margin: 5% 15% 5% 15%;
-
-                        }
-                    } 
+                         
+                        
 
                       /* Hover section */
                       .code-side:hover{
