--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,7 +32,7 @@
                     .art-side{
                         /* background-image:url("../images/GalaxyButterflies.jpg"); */
                         background-color: rgb(5, 5, 27);
-                        background-size:480px, 480px;
+                        /* background-size:480px, 480px; */
                         width:300px;
                         height:300px;
                         text-align:center;
