--- a/CSS/webStyles.css
+++ b/CSS/webStyles.css
@@ -86,18 +86,18 @@ hr{
         width:200px;
         height:100px;
     }
-    .bug-log{
+    /* .bug-log{
         float:right;
         margin-left:30px;
         width:200px;
         height:100px;
-    }
-    .tinDog{
+    } */
+    /* .tinDog{
         float:right;
         margin-left:30px;
         width:100px;
         height:200px;
-    }
+    } */
     .code-description{
         margin: 0px auto 0px auto;
          }
