--- a/CSS/webStyles.css
+++ b/CSS/webStyles.css
@@ -1,4 +1,98 @@
 body{
+    background-color: rgb(12, 12, 12);
+    margin:0;
+    text-align:center;
+    font-family: "Ariel",Arial, Helvetica, sans-serif;
+}
+
+/* Inro title */
+
+.intro-title{
+    color: rgb(221, 219, 219);
+    position: absolute;
+    margin-top:35vh;
+}
+@media screen and (max-width: 1000px){
+    .intro-title{
+        margin-top:10vh;
+    }
+}
+
+/* card section */
+.card{
+    margin-top:20px;
+    background-color:rgba(212, 212, 212, 0.082);
+}
+.card:hover{
+    color:rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+}
+
+@media screen and (max-width:1000px){
+    .card{
+        margin-top:20vh;
+        margin-bottom:3vh;
+    }
+}
+
+/* profile section */
+
+.profile-pic{
+    width:165px;
+    height:200px;
+    margin: 20px auto 20px auto;
+    border: 1px solid black; 
+}
+
+@media screen and (max-width:1000px){
+    .profile-pic{
+        width:265px;
+        height:300px;
+    }
+}
+
+/* skills section */
+.skills{
+    position:absolute;
+    margin:250px 900px 0px 0px;
+    background-color:rgba(212, 212, 212, 0.082);
+    padding: 20px 30px;
+    color: rgb(221, 219, 219);
+}
+
+@media screen and (max-width:1000px){
+    .skills{
+    position:static;
+    margin:0px 0px 50px 1px ;
+    }
+}
+
+.projects{
+    position:absolute;
+    margin: 380px 0px 0px 500px;
+}
+@media screen and (max-width:1000px){
+    .projects{
+        position:static;
+        margin:0px 0px 0px 0px;
+    }
+}
+
+.kanban{
+    color:black;
+}
+
+.copyright{
+    position:absolute;
+    right:0;
+}
+
+
+
+
+
+
+/* body{
     background-color: #fefefeef;
     margin:0;
     text-align:center;
@@ -59,15 +153,16 @@ hr{
  .bottom-container{
     background-color: #065255;
     padding:50px 0 20px;
-}
-.top-container{
-    background-color:rgba(10, 168, 207, 0.297);
-    padding-top:100px;
-    background-size:1000px auto ;
-    background-repeat: no-repeat;
+} */
+/* .top-container{ */
+    /* background-color:rgba(10, 168, 207, 0.297); */
+    /* background-image:url("../images/GalaxyButterflies.jpg"); */
+    /* padding-top:100px; */
+    /* background-size:1000px auto ; */
+    /* background-repeat: no-repeat; */
     /* margin-left:178px; */
-    }
-    h3{
+    /* } */
+    /* h3{
         color:#11999e;
         margin: 20px auto 20px auto;
     }
@@ -143,4 +238,4 @@ hr{
                  color:#eaf6f6;
                  font-size:0.75rem;
                  padding: 20px 0;
-             }
+             } */
